--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <div class="project-info">
                      <h1>Language</h1>
                         <p>- Portuguese(Native)</p>
-                        <p>- English(Intermidiary)</p>   
+                        <p>- English(Intermediary)</p>   
                     </div>
                     <div class="project-img">
                         <img src="./languages-signpost.jpg" alt="img">
