--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
                 <div class="project-item">
                     <div class="project-info">
                      <h1>Digital Skills</h1>
-                        <p>- Intermediated user of Microsoft Word,Excel and PowerPoint. </p>
-                        <p>- Basic SAP user.</p>
-                        <p>- Intermidiated user of Google Ads,Facebook Ads and Data Studio.</p>
-                        <p>- Basic user of Java(Object Oriented Programming),javascript,CSS,HTML and Git/Github</p>
+                        <p> C  PHP SQL</p>
+                        <p> HTML CSS Javascript</p>
+                        <p> Shell script</p>
+                        <p> Unix</p>
                     </div>
                     <div class="project-img">
                         <img src="./0a1-103.jpg" alt="img">
