--- a/index.html
+++ b/index.html
@@ -30,24 +30,22 @@
                 <div class="project-item">
                     <div class="project-info">
                      <h1>Skills</h1>
-                        <p>- Oral communication skills acquired in customer service.</p>
-                        <p>- Organizational capacity acquired while managing a bar.</p>
-                        <p>- Highly motivated and willing to take risks and consecutive learning bringing positive results to the company. </p>
-                        <p>- Learning continues.</p>
-                        <p>- Active Listening.</p>   
-
+                        <p>I am communicative and I love to learn new things.
+                        Organization and motivation are some of my main characteristics.
+                        I'm looking for an opportunity to develop and improve my knowledge
+                        and also something that can instruct me in an increasing and continuous 
+                        way, allowing me to contribute to motivated projects.</p>
                     </div>
                     <div class="project-img">
                         <img src="./Soft-Skills.png" alt="img">
                     </div>
                 </div>
                 <div class="project-item">
-                    <div class="project-info">
+                   <div class="project-info">
                      <h1>Digital Skills</h1>
-                        <p> C  PHP SQL</p>
-                        <p> HTML CSS Javascript</p>
-                        <p> Shell script</p>
-                        <p> Unix</p>
+                        <p> C | PHP | SQL | Java </p>
+                        <p> HTML | CSS | Javascript</p>
+                        <p> Unix | Shell script</p>
                     </div>
                     <div class="project-img">
                         <img src="./0a1-103.jpg" alt="img">
@@ -64,13 +62,16 @@
                     </div>
                 </div>
                 <div class="project-item">
-                    <div class="project-info">
+                     <div class="project-info">
                     <h1>Contacts</h1>
                         <p><i class="fa-solid fa-envelope"></i> annamarianunes6@gmail.com</p>
-                        <p><i class="fa-brands fa-linkedin"></i> linkedin.com/in/annamarianunes</p>
-                        <p><i class="fa-brands fa-git-square"></i> github.com/AnnamariaNunes</p>
+                        <p><a href="https://www.linkedin.com/in/annamarianunes/" ><i class="fa-brands fa-linkedin"  ></i> linkedin.com/in/annamarianunes</p></a>
+                        <p><a href="https://github.com/AnnamariaNunes" ><i class="fa-brands fa-git-square"></i> github.com/AnnamariaNunes</a></p>
                         <p><i class="fa-solid fa-mobile-screen-button"></i> +351 910581447</p>
                         <p><i class="fa-solid fa-location-dot"></i> 2910-113 Setúbal</p>       
+                    </div>
+                    <div class="project-img">
+                        <img src="./depositphotos_78262052-stock-photo-contact-us-icons-web-connection.jpg" alt="img">
                     </div>
                     <div class="project-img">
                         <img src="./depositphotos_78262052-stock-photo-contact-us-icons-web-connection.jpg" alt="img">
